# mlops-fundamentals-2026

./: .gitignore  dvc.yaml  mlflow.db  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  green_tripdata_2021-03.parquet.dvc
docker/: Dockerfile  app.py  docker-compose.yaml  index.html  requirements.txt
dvclive/: metrics.json  params.yaml
dvclive/plots/metrics/: pred_time.tsv  r2.tsv  rmse.tsv  training_time.tsv
models/: .gitignore  rfr_model.pkl.dvc
practice1/: .gitignore  classification.ipynb  clean_tripdata.parquet  clean_tripdata.parquet.dvc  clean_tripdata_v2.parquet.dvc  green_tripdata_v2.parquet.dvc  merge_data.py  practice1.ipynb  regression.ipynb  report_2.md  rfr_model_v2.pkl.dvc  test_model.ipynb
reports/: report_3.md  report_5.md
scripts/: clean_data.py  regression.py
