[project]
name = "mlops-fundamentals-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc[s3]>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "dvclive>=3.49.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "protobuf<4.0.0",
    "mlflow==3.10.1",
]
